# mit-ocw-6.837

./: .gitignore  CMakeLists.txt  README.md  libvecmath.so.1.1
assignments/a0/: main.cpp  obj.cpp
assignments/a1/: camera.cpp  camera.h  curve.cpp  curve.h  extra.h  main.cpp  parse.cpp  surf.cpp  surf.h
assignments/a1/swp/: birail.swp  bsurf.swp  flircle_scale.swp  sharp.swp  sharp_scale.swp
assignments/assignment_0/: Makefile  a0  main.cpp  obj.cpp  obj.h  simplify.cpp  simplify.h
assignments/assignment_1/: Makefile  a1  curve.cpp  curve.h  parse.cpp  parse.h  surf.cpp  surf.h  tuple.h
assignments/assignment_1/swp/: crom.swp  trefoil.swp
lib/: libvecmath.so.1  libvecmath.so.1.1
lib/src/vecmath/: Makefile  Matrix4f.cpp  Matrix4f.h
lib/vecmath/include/: Vector4f.h
lib/vecmath/src/: Matrix2f.cpp  Matrix3f.cpp  Matrix4f.cpp  Quat4f.cpp  Vector2f.cpp  Vector3f.cpp  Vector4f.cpp  util.cpp
